# PileOfMedia

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  MyCollectionServer.sln  README.md  angular.json  docker-compose-dev.yml  docker-compose.yml  package-lock.json  package.json  schema.ts  tables.ts  tsconfig.json
application/: Cargo.toml  convert_to_sql.rs  default_book_repository.rs  delete.rs  fallback_unwrap.rs  insert.rs  lib.rs  select.rs
application/enums/: db_image_extension.rs  db_language.rs  db_user_status.rs  image_extension.rs  language.rs  mod.rs
application/from_row/: Cargo.toml
application/from_row/src/: lib.rs  postgres_type.rs
application/from_row_macro/: Cargo.toml
application/from_row_macro/src/: lib.rs
application/macros/: convert.rs  enum_from_sql.rs  mod.rs
application/repositories/: default_book_relations_repository.rs  default_book_repository.rs  default_character_repository.rs  default_file_repository.rs  default_franchise_repository.rs  default_genre_repository.rs  default_image_repository.rs  default_person_repository.rs  default_role_repository.rs  default_theme_repository.rs  mod.rs
application/repositories/account_repository/: default_account_repository.rs  default_mut_account_repository.rs  mod.rs
application/repositories/book_repository/: default_book_character_repository.rs  default_book_genre_repository.rs  default_book_involved_repository.rs  default_book_repository.rs  default_book_theme_repository.rs  default_mut_book_repository.rs  mod.rs
application/repositories/character_repository/: default_character_repository.rs  default_mut_character_repository.rs  mod.rs
application/repositories/file_repository/: default_file_repository.rs  default_mut_file_repository.rs  mod.rs
application/repositories/franchise_repository/: default_franchise_repository.rs  default_mut_franchise_repository.rs  mod.rs
application/repositories/genre_repository/: default_genre_repository.rs  default_mut_genre_repository.rs  mod.rs
application/repositories/image_repository/: default_image_repository.rs  default_mut_image_repository.rs  mod.rs
application/repositories/person_repository/: default_mut_person_repository.rs  default_person_repository.rs  mod.rs
application/repositories/role_repository/: default_mut_role_repository.rs  default_role_repository.rs  mod.rs
application/repositories/theme_repository/: default_mut_theme_repository.rs  default_theme_repository.rs  mod.rs
application/repositories/user_repository/: default_mut_user_repository.rs  default_user_repository.rs  mod.rs
application/schemas/: db_account.rs  db_book.rs  db_book_character.rs  db_book_creator.rs  db_book_genre.rs  db_book_involved.rs  db_book_statistic.rs  db_book_theme.rs  db_book_translation.rs  db_character.rs  db_character_translation.rs  db_franchise.rs  db_franchise_translation.rs  db_genre.rs  db_genre_translation.rs  db_image.rs  db_image_data.rs  db_image_translation.rs  db_person.rs  db_person_translation.rs  db_rating.rs  db_role.rs  db_role_translation.rs  db_theme.rs  db_theme_translation.rs  db_user.rs  db_user_book.rs  mod.rs
application/select/: column_table.rs  combined_tuple.rs  comparison.rs  condition.rs  expression.rs  join.rs  mod.rs  order_by.rs  select.rs  selector.rs  to_sql_value.rs
application/select/conditions/: column_equal.rs  column_not_null.rs  column_null.rs  mod.rs  value_equal.rs  value_ilike.rs  value_in.rs
domain/: Cargo.toml  available_translations.rs  file_name.rs  io_transaction.rs  items_total.rs  lib.rs  pagination.rs  score.rs  slug.rs  vec_single.rs  vec_tuple_to_map.rs
domain/entities/: account.rs  book.rs  character.rs  franchise.rs  genre.rs  image.rs  involved.rs  mod.rs  person.rs  rating.rs  role.rs  theme.rs  user.rs
domain/entities/account/: create_account.rs  create_partial_account.rs  partial_create_account.rs
domain/entities/book/: book.rs  book_character.rs  book_involved.rs  book_statistic.rs  book_translation.rs  create_book.rs  create_partial_book.rs  insert_book.rs  mod.rs
domain/entities/character/: character.rs  character_translation.rs  create_character.rs  create_partial_character.rs  mod.rs
domain/entities/franchise/: create_franchise.rs  create_partial_franchise.rs  franchise.rs  franchise_translation.rs  mod.rs
domain/entities/genre/: create_genre.rs  create_partial_genre.rs  genre_translation.rs
domain/entities/image/: create_image.rs  create_partial_image.rs  image.rs  image_data.rs  mod.rs  partial_create_image.rs
domain/entities/person/: create_partial_person.rs  create_person.rs  mod.rs  person.rs  person_role.rs  person_translation.rs
domain/entities/role/: create_partial_role.rs  create_role.rs  role_translation.rs
domain/entities/theme/: create_partial_theme.rs  create_theme.rs  theme.rs  theme_translation.rs
domain/entities/user/: create_partial_user.rs  create_user.rs  create_user_book.rs  partial_create_user.rs  user_book.rs  user_status.rs
domain/enums/: language.rs
domain/utoipa/: mod.rs
infrastructure/: Cargo.toml  default_book_service.rs  lib.rs
infrastructure/services/: default_book_character_service.rs  default_book_genre_service.rs  default_book_relations_service.rs  default_book_service.rs  default_character_service.rs  default_file_service.rs  default_franchise_service.rs  default_genre_service.rs  default_image_service.rs  default_person_service.rs  default_role_service.rs  default_theme_service.rs  mod.rs
infrastructure/services/account_service/: default_account_service.rs  default_mut_account_service.rs  mod.rs
infrastructure/services/book_service/: default_book_service.rs  default_mut_book_service.rs  mod.rs
navigation/: Cargo.toml  app_state.rs  database_connection.rs  jwt.rs  lib.rs
navigation/controllers/: account_controller.rs  book_controller.rs  character_controller.rs  doc.rs  franchise_controller.rs  genre_controller.rs  mod.rs  person_controller.rs  role_controller.rs  theme_controller.rs  user_controller.rs
navigation/extractors/: mod.rs  query_pagination.rs
navigation/implementations/: mod.rs
(+573 files in other folders)
