[workspace]

members = [ "src/application/from_row",
  "src/application/from_row_macro",
]
[package]
name = "my_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.198", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.80"
dotenvy = "0.15.7"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
bb8-postgres = { version = "0.8.1", features = ["with-chrono-0_4"] }
from-row = { path = "src/application/from_row", features = ["from-row-macros"]}
