[workspace]

members = [
    "domain",
    "repositories",
    "services",
    "application",
    "infrastructure",
    "navigation",
    "multipart"
]
[package]
name = "my_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
navigation = { path = "navigation" }
