[workspace]

members = [
    "domain",
    "repositories",
    "services",
    "application",
    "infrastructure",
    "navigation",
    "multipart",
    "openapi"
]

[package]
name = "my_collection"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
navigation = { path = "navigation" }

[workspace.lints.clippy]
branches_sharing_code = "warn"
cognitive_complexity = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
default_trait_access = "warn"
derive_partial_eq_without_eq = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_with_drain = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
missing_panics_doc = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
missing_const_for_fn = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
negative_feature_names = "warn"
non_send_fields_in_send_ty = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
or_fun_call = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
similar_names = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
struct_excessive_bools = "warn"
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
too_many_lines = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unchecked_duration_subtraction = "warn"
unicode_not_nfc = "warn"
uninhabited_references = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
useless_let_if_seq = "warn"
zero_sized_map_values = "warn"
dbg_macro = "warn"
cast_lossless = "warn"
indexing_slicing = "warn"
cast_possible_truncation = "warn"
manual_midpoint = "warn"
return_and_then = "warn"
single_option_map = "warn"
# unwrap_used = "warn"
