[package]
name = "application"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
repositories = { path = "../repositories" }

from-row = { path = "from_row", features = ["macros", "chrono", "testing"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
bb8-postgres = { version = "0.9.0", features = ["with-chrono-0_4"] }
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
infer = "0.19.0"
image = { version = "0.25.6" }

[dev-dependencies]
tokio = "1.47.1"

[lib]
name = "application"
path = "lib.rs"

[lints]
workspace = true
