[package]
name = "domain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.218", features = ["derive"], optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "97bc507", optional = true, features = ["chrono"] }
async-trait = { version = "0.1.87", optional = true }
serde_json = { version = "1.0.140", optional = true }
multipart = { path = "../multipart", optional = true }
regex = "1.11.1"

[lib]
name = "domain"
path = "lib.rs"

[features]
axum-multipart = ["multipart", "async-trait", "serde_json"]

[lints]
workspace = true

