[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.83"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }

domain = { path = "../domain" }
services = { path = "../services" }
repositories = { path = "../repositories" }

[lib]
name = "infrastructure"
path = "lib.rs"

[lints]
workspace = true

