[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.86"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }

domain = { path = "../domain" }
services = { path = "../services" }
repositories = { path = "../repositories" }

[lib]
name = "infrastructure"
path = "lib.rs"

[lints]
workspace = true

