[package]
name = "navigation"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain", features = ["utoipa", "serde", "axum-multipart"] }
repositories = { path = "../repositories" }
services = { path = "../services" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
multipart = { path = "../multipart" }

tower-http = { version = "0.6.2", features = ["cors"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
bb8-postgres = { version = "0.9.0", features = ["with-chrono-0_4"] }
axum = { version = "0.8.1", features = ["macros", "json", "multipart"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
dotenvy = "0.15.7"
utoipa = { git = "https://github.com/juhaku/utoipa.git", rev = "97bc507" }
jsonwebtoken = { version = "9.3.1", features = ["pem"] }
chrono = { version = "0.4.40", features = ["serde"] }

[lib]
name = "navigation"
path = "lib.rs"

[lints]
workspace = true
