[package]
name = "from-row"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.10"
from-row-macros = { path = "../from_row_macro", optional = true }
chrono = { version = "0.4.38", optional = true}

[features]
macros = ["from-row-macros"]
macros-validation = ["from-row-macros/validate"]
