[package]
name = "from-row"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.13"
from-row-macros = { path = "../from_row_macro", optional = true }
chrono = { version = "0.4.39", optional = true }
testcontainers = { version = "0.23.1", optional = true }
tokio = { version = "1.43.0", features = ["sync"], optional = true }
bb8-postgres = { version = "0.9.0", features = ["with-chrono-0_4"], optional = true }

[features]
macros = ["from-row-macros"]
testing = ["tokio", "bb8-postgres", "from-row-macros/testing", "testcontainers"]
