[package]
name = "from-row-macros"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.38"
syn = "2.0.98"
proc-macro2 = "1.0.93"

[lib]
proc-macro = true

[features]
testing = []

[lints]
workspace = true
